# chess-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  data.h  main.h  move.c  move.h
docs/: learn.md
src/: board.c  board.h  castles.c  castles.h  data.h  input.c  input.h  main.c  move.c  move.h  moveList.c  moveList.h  moveset.c  moveset.h  piece.c  piece.h  promotion.c  promotion.h  special.c
tests/: test.c  testMoveset.c  testMoveset.h
